--- a/index.html
+++ b/index.html
@@ -108,6 +108,6 @@
     </body>
 
     <footer>
-      <p>© Shahriar Akib 2023 || Bevelop By Shahriar Akib</p>
+      <p>© Shahriar Akib 2023 || Develop By Shahriar Akib</p>
     </footer>
    </html>
